[build-system]
requires = [
    "cffi @ git+https://github.com/python-cffi/cffi.git@d7f750b1b1c5ea4da5aa537b9baba0e01b0ce843",
    "setuptools==68.2.2",
    "wheel==0.41.2",
]
# Need to use legacy backend because setup_zstd.py breaks build isolation.
build-backend = "setuptools.build_meta:__legacy__"

[tool.black]
line-length = 80
